pkg/front_end/testcases/nnbd/issue49198.dart.strong.transformed.expect
library;
import self as self;
import "dart:core" as core;

static final field core::bool inSoundMode = !(core::_GrowableList::•<core::int?>(0) is core::List<core::int>);
static method main() → dynamic {
  try {
    throw let dynamic #t1 = null as dynamic in #t1 == null ?{core::Object} #t1 as{TypeError} core::Object : #t1{core::Object};
  }
  on core::TypeError catch(final core::TypeError e) {
    core::print("${e.{core::Object::runtimeType}{core::Type}}:${e}");
  }
}


Extra constant evaluation status:
Evaluated: AsExpression @ org-dartlang-testcase:///issue49198.dart:9:16 -> NullConstant(null)
Evaluated: EqualsNull @ org-dartlang-testcase:///issue49198.dart:9:5 -> BoolConstant(true)
Evaluated: VariableGet @ org-dartlang-testcase:///issue49198.dart:9:16 -> NullConstant(null)
Evaluated: VariableGet @ org-dartlang-testcase:///issue49198.dart:9:5 -> NullConstant(null)
Extra constant evaluation: evaluated: 16, effectively constant: 4
